Prevented scroll on mobile and increased select tag font size to 16px

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 html {
   height: 100%;
-  padding: 0;
-  margin: 0;
 }
 
 body {
