--- a/src/CurrencyModal.css
+++ b/src/CurrencyModal.css
@@ -1,3 +1,7 @@
+.form-control {
+  font-size: 16px;
+}
+
 .modal-dialog {
   color: #333;
 }
